--- a/settings.gradle
+++ b/settings.gradle
@@ -161,6 +161,21 @@ dependencyResolutionManagement {
             library('lwjgl', 'org.lwjgl','lwjgl').versionRef('lwjgl')
             library('slf4j-api', 'org.slf4j:slf4j-api:2.0.7')
 
+            // paper start
+            library('adventure-api', 'net.kyori:adventure-api:4.16.0')
+            library('adventure-key', 'net.kyori:adventure-key:4.16.0')
+            library('adventure-text-minimessage', 'net.kyori:adventure-text-minimessage:4.16.0')
+            library('adventure-text-serializer-gson', 'net.kyori:adventure-text-serializer-gson:4.16.0')
+            library('adventure-text-serializer-json', 'net.kyori:adventure-text-serializer-json:4.16.0')
+            library('adventure-text-serializer-legacy', 'net.kyori:adventure-text-serializer-legacy:4.16.0')
+            library('adventure-text-serializer-plain', 'net.kyori:adventure-text-serializer-plain:4.16.0')
+            library('adventure-text-serializer-ansi', 'net.kyori:adventure-text-serializer-ansi:4.16.0')
+            library('option', 'net.kyori:option:1.0.0')
+            library('ansi', 'net.kyori:ansi:1.0.3')
+            library('examination-api', 'net.kyori:examination-api:1.3.0')
+            library('examination-string', 'net.kyori:examination-string:1.3.0')
+            // paper end
+
 
             // Ketting add all missing libraries
             bundle('launcher', [
@@ -205,7 +220,19 @@ dependencyResolutionManagement {
                     'lwjgl-stb',
                     'lwjgl-tinyfd',
                     'lwjgl',
-                    'slf4j-api'
+                    'slf4j-api',
+                    'adventure-api',
+                    'adventure-key',
+                    'adventure-text-minimessage',
+                    'adventure-text-serializer-gson',
+                    'adventure-text-serializer-json',
+                    'adventure-text-serializer-legacy',
+                    'adventure-text-serializer-plain',
+                    'adventure-text-serializer-ansi',
+                    'ansi',
+                    'examination-api',
+                    'examination-string',
+                    'option'
             ])
 
             bundle('lwjgl', ['lwjgl', 'lwjgl-glfw', 'lwjgl-opengl', 'lwjgl-stb', 'lwjgl-tinyfd'])
