--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1071,4 +1071,8 @@ public net.minecraft.server.players.PlayerList f_11196_ # players
 public-f net.minecraft.server.players.PlayerList f_11193_ # maxPlayers
 
 public-f net.minecraft.server.level.TicketType f_9452_ # timeout
+
+public net.minecraft.world.item.Item f_41369_ # rarity
+
+public net.minecraft.world.entity.projectile.FishingHook f_37090_ # timeUntilLured
 #endgroup KETTING
