--- a/settings.gradle
+++ b/settings.gradle
@@ -170,10 +170,12 @@ dependencyResolutionManagement {
             library('adventure-text-serializer-legacy', 'net.kyori:adventure-text-serializer-legacy:4.14.0')
             library('adventure-text-serializer-plain', 'net.kyori:adventure-text-serializer-plain:4.14.0')
             library('adventure-text-serializer-ansi', 'net.kyori:adventure-text-serializer-ansi:4.14.0')
+            library('adventure-text-logger-slf4j', 'net.kyori:adventure-text-logger-slf4j:4.14.0')
             library('option', 'net.kyori:option:1.0.0')
             library('ansi', 'net.kyori:ansi:1.0.3')
             library('examination-api', 'net.kyori:examination-api:1.3.0')
             library('examination-string', 'net.kyori:examination-string:1.3.0')
+            library('spongepowered-configurate-yaml', 'org.spongepowered:configurate-yaml:4.1.2')
             // paper end
 
             // Ketting add all missing libraries
@@ -221,9 +223,11 @@ dependencyResolutionManagement {
                     'adventure-text-serializer-legacy',
                     'adventure-text-serializer-plain',
                     'adventure-text-serializer-ansi',
+                    'adventure-text-logger-slf4j',
                     'ansi',
                     'examination-api',
                     'examination-string',
+                    'spongepowered-configurate-yaml',
                     'option'
             ])
 
