--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1075,4 +1075,7 @@ public-f net.minecraft.server.level.TicketType f_9452_ # timeout
 public net.minecraft.world.item.Item f_41369_ # rarity
 
 public net.minecraft.world.entity.projectile.FishingHook f_37090_ # timeUntilLured
+
+public net.minecraft.world.entity.ExperienceOrb m_20793_(I)I # durabilityToXp | private -> public
+public net.minecraft.world.entity.ExperienceOrb m_20798_(I)I # xpToDurability | private -> public
 #endgroup KETTING
