--- a/settings.gradle
+++ b/settings.gradle
@@ -76,6 +76,7 @@ dependencyResolutionManagement {
             library('kettingcommon',   'org.kettingpowered', 'kettingcommon').version('2.3.4')
             library('kettinglauncher', 'org.kettingpowered', 'kettinglauncher').version('1.3.8')
             library('terminalcolors',  'org.kettingpowered', 'terminal-colors').version('1.0.2')
+            library('mavenmodelcombined', 'org.kettingpowered', 'maven-model-combined').version('1.0.0')
 
             version('snakeyaml', '2.2')
             library('yaml', 'org.yaml', 'snakeyaml').versionRef('snakeyaml')
@@ -95,6 +96,16 @@ dependencyResolutionManagement {
             library('specialsource', 'net.md-5', 'SpecialSource').version('1.11.3')
 
             library('inject', 'javax.inject', 'javax.inject').version('1')
+
+            library('maven-resolver-provider', 'org.apache.maven', 'maven-resolver-provider').version('3.8.5')
+            library('maven-resolver-connector', 'org.apache.maven.resolver', 'maven-resolver-connector-basic').version('1.7.3')
+            library('maven-resolver-transport', 'org.apache.maven.resolver', 'maven-resolver-transport-http').version('1.7.3')
+
+            bundle('maven-transitive', [
+                    'maven-resolver-provider',
+                    'maven-resolver-connector',
+                    'maven-resolver-transport'
+            ])
 
             bundle('bukkitlibs', [
                     'inject',
