--- a/build_forge.gradle
+++ b/build_forge.gradle
@@ -1009,6 +1009,7 @@ tasks.register('kettingJar', Jar) {
     manifest{
         attributes 'Main-Class': 'org.kettingpowered.launcher.Main'
         attributes 'Launcher-Agent-Class': 'org.kettingpowered.launcher.Main'
+        attributes 'Premain-Class': 'org.kettingpowered.launcher.Main'
         attributes 'Automatic-Module-Name': 'org.kettingpowered.kettinglauncher'
         attributes 'Bundled': 'true'
         attributes 'MinecraftVersion': MC_VERSION
