Fix dynmap illegal access error

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1071,4 +1071,6 @@ public net.minecraft.server.players.PlayerList f_11196_ # players
 public-f net.minecraft.server.players.PlayerList f_11193_ # maxPlayers
 
 public-f net.minecraft.server.level.TicketType f_9452_ # timeout
+
+public net.minecraft.world.level.chunk.LevelChunk f_62775_ # loaded
 #endgroup KETTING
